# simobs

./: Cargo.toml
src/: gridder.rs  lib.rs  main.rs  noise.rs  scan.rs  utils.rs
